--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "test/"
   ],
   "dependencies": {
+    "@babel/preset-env": "^7.22.20",
     "@babel/runtime": "^7.12.5",
     "@videojs/vhs-utils": "^3.0.5",
     "@xmldom/xmldom": "^0.8.3",
+    "babel-loader": "^9.1.3",
     "global": "^4.4.0"
   },
   "devDependencies": {
@@ -71,7 +73,8 @@
     "videojs-generate-karma-config": "^8.0.1",
     "videojs-generate-rollup-config": "~7.0.0",
     "videojs-generator-verify": "~3.0.2",
-    "videojs-standard": "^9.0.1"
+    "videojs-standard": "^9.0.1",
+    "webpack-cli": "^5.1.4"
   },
   "generator-videojs-plugin": {
     "version": "7.7.3"
